# ges-legacy-code

./: .gitattributes  .gitignore  CMakeLists.txt  GES.sln  README.md  copy_lib.bat  gesauth.txt  gesupdate.txt  hl2.psess
game/: CMakeLists.txt  client_ges-2010.vcxproj  client_ges-2010.vcxproj.filters  ge_door.cpp  server_ges-2010.vcxproj  server_ges-2010.vcxproj.filters  server_test.vcxproj  server_test.vcxproj.filters  v5_achievements.cpp
game/ges/client/: c_ge_door_interp.cpp  c_ge_player.cpp  c_ge_player.h  clientmode_ge.cpp  ge_blacklist.cpp  ge_blacklist.h  ge_musicmanager.cpp  ge_vieweffects.cpp  ge_vieweffects.h
game/ges/server/: ent_capturearea.cpp  ent_capturearea.h  ge_ammocrate.cpp  ge_ammocrate.h  ge_armorvest.cpp  ge_armorvest.h  ge_bot.cpp  ge_bot.h  ge_brush.cpp  ge_client.cpp  ge_door.cpp  ge_door.h  ge_door_interp.cpp  ge_door_interp.h  ge_func_rebreakable.cpp  ge_gameinterface.cpp  ge_gameplayinfo.cpp  ge_logic_gate.cpp  ge_logic_gate.h  ge_md5util.cpp  ge_md5util.h  ge_player.cpp  ge_player.h  ge_stats_recorder.cpp  ge_stats_recorder.h  ge_triggers.cpp  ge_triggers.h  grenade_ge.cpp  grenade_gebase.h  grenade_mine.cpp  grenade_rocket.cpp  grenade_rocket.h  grenade_shell.cpp  grenade_shell.h  npc_tknife.cpp  prop_ge_dynamic.cpp
game/ges/shared/: b314_achievements.cpp  b3_achievements.cpp  b4_achievements.cpp  ge_achievement.cpp  ge_achievement.h  ge_achievement_defs.h  ge_game_timer.cpp  ge_game_timer.h  ge_gamerules.cpp  ge_gamerules.h  ge_generictoken.cpp  ge_player_shared.cpp  ge_player_shared.h  ge_round_timer.cpp  ge_round_timer.h  ge_shareddefs.h  ge_utils.cpp  ge_utils.h  ge_weapon.cpp  ge_weapon.h  ge_weapon_parse.cpp  ge_weapon_parse.h  ge_weaponautomatic.cpp  ge_weaponmelee.cpp  ge_weaponmelee.h  ge_weaponpistol.cpp  ge_webrequest.cpp  ge_webrequest.h  weapon_ar33.cpp  weapon_autoshotgun.cpp  weapon_cmag.cpp  weapon_d5k.cpp  weapon_dd44.cpp  weapon_goldengun.cpp  weapon_grenade.cpp  weapon_grenade_launcher.cpp  weapon_kf7.cpp  weapon_klobb.cpp  weapon_knife.cpp  weapon_knife_throwing.cpp  (+13 more)
game/sdk/client/: achievement_notification_panel.cpp  achievement_notification_panel.h  c_baseanimating.cpp  c_baseanimating.h  c_basecombatweapon.cpp  c_baseentity.cpp  c_baseentity.h  c_baseplayer.cpp  c_baseviewmodel.cpp  c_colorcorrection.cpp  c_effects.cpp  c_env_projectedtexture.cpp  c_gib.cpp  c_impact_effects.cpp  c_playerlocaldata.h  c_playerresource.cpp  c_playerresource.h  c_soundscape.cpp  c_steamjet.cpp  c_te.cpp  c_te_dynamiclight.cpp  c_te_explosion.cpp  c_te_legacytempents.cpp  c_te_legacytempents.h  c_team.cpp  c_team.h  c_world.cpp  cdll_bounded_cvars.cpp  cdll_util.h  (+38 more)
game/tests/: common_test.h  env.cpp  sdk_listener.cpp  sdk_listener.h
geutils/: vguidoc.py
geutils/Gameplay MD5/: gphashes_textver.txt  icegphashes.bat
geutils/Steam ID Hasher/: steamids.txt
lib/curl/: libcurl_a.lib
lib/public/: mathlib.lib  tier1.lib
lib/python/: python34.lib
lib/webrequest/: WebRequest.lib
linux_sdk/: Makefile  Makefile.choreoobjects  Makefile.game  Makefile.mathlib  Makefile.tier1  Makefile.vcpm
materialsystem/stdshaders/: buildsdkshaders.bat  stdshader_dx9-2005.vcproj
mathlib/: CMakeLists.txt  mathlib.vcxproj  mathlib.vcxproj.filters  mathlib_base.cpp
public/: Color.h  SoundParametersInternal.cpp  bitvec.h  const.h  dt_recv.cpp  dt_send.cpp  jigglebones.cpp  soundflags.h  studio.cpp
public/mathlib/: mathlib.h
public/python/: fficonfig.h  pyconfig.h  pyconfig_linux.h
public/tier0/: basetypes.h  memalloc.h  memoverride.cpp  platform.h  threadtools.h
public/tier1/: convar.h  strtools.h  utlintrusivelist.h
public/vgui_controls/: AnimatingImagePanel.h  ImagePanel.h  Label.h  Panel.h  PanelListPanel.h  RichText.h  SectionedListPanel.h
public/vstdlib/: jobthread.h
tier1/: CMakeLists.txt  tier1.vcxproj  tier1.vcxproj.filters
utils/: vcxproj2cmake.py
utils/ges_navgenerator/: ges_navgenerator.sln  ges_navgenerator.vcproj  simple_box.vmf
utils/python/: boost_python.txt
utils/vprojtomake/: makefilecreator.cpp  vcprojconvert.cpp  vcprojconvert.h
vgui2/vgui_controls/: AnimationController.cpp  ComboBox.cpp  Frame.cpp  ImageList.cpp  ImagePanel.cpp  Label.cpp  Panel.cpp  PanelListPanel.cpp  RichText.cpp  SectionedListPanel.cpp  TextEntry.cpp  TreeView.cpp  vgui_controls-2005.vcxproj  vgui_controls-2005.vcxproj.filters
(+316 files in other folders)
